--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,18 @@ body{
 .input-large{
   width: 500px !important;
 }
+.btn-primary{
+  background-color: #C200DC;
+  }
+.btn-primary:hover{
+  background-color:#C200DC;
+}
+.btn-primary:active{
+  background-color:#C200DC;
+}
+
+.bannergb{
+  background-color:#FAC4EB;
+
+  height: 500px;
+}
