--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,3 +3,16 @@ body {
 
 .input-large {
   width: 500px !important; }
+
+.btn-primary {
+  background-color: #C200DC; }
+
+.btn-primary:hover {
+  background-color: #C200DC; }
+
+.btn-primary:active {
+  background-color: #C200DC; }
+
+.bannergb {
+  background-color: #FAC4EB;
+  height: 500px; }
