--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,31 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,600,700&subset=latin-ext');
 $bg-color: #333;
 body{
   background: $bg-color;
+  font-family: 'Raleway', sans-serif;
 }
+h1,h2,h3,h4,h5,h6{
+  font-family:inherit;
+  font-weight: 600;
+}
+h1{
+  font-size: 35px;
+}
+h2{
+  font-size: 25px;
+}h3{
+  font-size: 20px;
+}
+h4{
+  font-size: 15px;
+}
+h5{
+  font-size: 10px;
+}
+h{
+  font-size: 5px;
+}
+
 .input-large{
   width: 500px !important;
 }
@@ -19,4 +43,88 @@ body{
   background-color:#FAC4EB;
 
   height: 500px;
+}
+.img-size{
+  width:300px;
+  float:right;
+}
+.carousel {
+  margin: 0 auto;
+  padding: 0 70px;
+}
+.carousel .item {
+  color: #999;
+  overflow: hidden;
+  min-height: 120px;
+  font-size: 13px;
+}
+.carousel .media {
+  position: relative;
+  padding: 0 0 0 20px;
+}
+.carousel .media img {
+  width: 75px;
+  height: 75px;
+  display: block;
+  border-radius: 50%;
+}
+.carousel .testimonial-wrapper {
+  padding: 0 10px;
+}
+.carousel .testimonial {
+  color: #808080;
+  position: relative;
+  padding: 15px;
+  background: #f1f1f1;
+  border: 1px solid #efefef;
+  border-radius: 3px;
+  margin-bottom: 15px;
+}
+.carousel .testimonial::after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  display: block;
+  background: #f1f1f1;
+  border: 1px solid #efefef;
+  border-width: 0 0 1px 1px;
+  position: absolute;
+  bottom: -8px;
+  left: 46px;
+  transform: rotateZ(-46deg);
+}
+.carousel .star-rating li {
+  padding: 0 2px;
+}
+.carousel .star-rating i {
+  font-size: 16px;
+  color: #ffdc12;
+}
+.carousel .overview {
+  padding: 3px 0 0 15px;
+}
+.carousel .overview .details {
+  padding: 5px 0 8px;
+}
+.carousel .overview b {
+  text-transform: uppercase;
+  color: #1abc9c;
+}
+.carousel .carousel-indicators {
+  bottom: -70px;
+}
+.carousel-indicators li, .carousel-indicators li.active {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  margin: 1px 2px;
+}
+.carousel-indicators li {
+  background: #e2e2e2;
+  border: 4px solid #fff;
+}
+.carousel-indicators li.active {
+  color: #fff;
+  background: #1abc9c;
+  border: 5px double;
 }
