--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,7 +50,6 @@ h{
 }
 .carousel {
   margin: 0 auto;
-  padding: 0 70px;
 }
 .carousel .item {
   color: #999;
@@ -68,31 +67,7 @@ h{
   display: block;
   border-radius: 50%;
 }
-.carousel .testimonial-wrapper {
-  padding: 0 10px;
-}
-.carousel .testimonial {
-  color: #808080;
-  position: relative;
-  padding: 15px;
-  background: #f1f1f1;
-  border: 1px solid #efefef;
-  border-radius: 3px;
-  margin-bottom: 15px;
-}
-.carousel .testimonial::after {
-  content: "";
-  width: 15px;
-  height: 15px;
-  display: block;
-  background: #f1f1f1;
-  border: 1px solid #efefef;
-  border-width: 0 0 1px 1px;
-  position: absolute;
-  bottom: -8px;
-  left: 46px;
-  transform: rotateZ(-46deg);
-}
+
 .carousel .star-rating li {
   padding: 0 2px;
 }
@@ -128,3 +103,8 @@ h{
   background: #1abc9c;
   border: 5px double;
 }
+.testimonial p{
+  font-size:10px;
+
+}
+
