--- a/src/css/style.css
+++ b/src/css/style.css
@@ -103,7 +103,7 @@ h {
   font-size: 10px; }
 
 .carousel-img-1 {
-  background: url("../img/04.jpg");
+  background: url("../img/KAawBcS.png");
   background-size: cover; }
 
 .carousel-img-2 {
