--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -108,7 +108,7 @@ h{
 
 }
 .carousel-img-1{
-  background: url("../img/04.jpg");
+  background: url("../img/KAawBcS.png");
   background-size: cover;
 }
 .carousel-img-2{
