--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,500,600,700&subset=latin-ext');
-$bg-color: #333;
+$bg-color:#fff;
 body{
   background: $bg-color;
   font-family: 'Raleway', sans-serif;
@@ -107,16 +107,25 @@ h{
   font-size:10px;
 
 }
-.carousel-img-1{
-  background: url("../img/KAawBcS.png");
-  background-size: cover;
+
+.popular-category-container{
+  a{
+    color:#70bf41;
+  }
+  span{
+    color: #95989D;
+  }
 }
-.carousel-img-2{
-  background: url("../img/03.jpg");
-  background-size: cover;
-}
-.carousel-img-3{
-  background: url("../img/img7.jpg");
-  background-size: cover;
+#account{
+  ul{
+    list-style: none;
+    li:first-child{
+      font-weight: 600;
+      font-size: 18px;
+    }
+    li{
+      margin-bottom: 5px;
+    }
+  }
 }
 
