--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,3 +121,43 @@ h {
 
 #footer-navber .nav-item .nav-link {
   color: black; }
+
+#popularleft {
+  background: url("../img/right-section.jpg");
+  background-size: cover;
+  padding: 15px; }
+  #popularleft ul {
+    list-style: none; }
+    #popularleft ul li {
+      color: #fff; }
+
+.leftoverlay:before {
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  display: block;
+  z-index: 0;
+  background-color: rgba(0, 0, 0, 0.5); }
+
+#popularright {
+  background: url("../img/right-section.jpg");
+  background-size: cover;
+  padding: 15px; }
+  #popularright ul {
+    list-style: none; }
+    #popularright ul li {
+      color: #fff; }
+
+.rightoverlay:before {
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  display: block;
+  z-index: 0;
+  background-color: rgba(0, 0, 0, 0.5); }
